@@ -1,5 +1,8 @@
 2011-01-14  Jason Merrill  <jason@redhat.com>
 
+	PR c++/47289
+	* pt.c (coerce_template_parms): Fix error recovery.
+
 	PR c++/46903
 	* typeck2.c (check_narrowing): Only check arithmetic types.
 
